--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
 
     <h2>Contact</h2>
     <div class="contact">
-      <a href="mailto:sahilkumar@email.com">Email</a>
+      <a href="mailto:sahilkumar98929@gmail.com">Email</a>
       <a href="https://www.linkedin.com/in/sahil-kumar-587a122ba" target="_blank">LinkedIn</a>
       <a href="https://github.com/Sahil-kumar-12" target="_blank">GitHub</a>
     </div>
